--- a/RealismMod.csproj
+++ b/RealismMod.csproj
@@ -11,30 +11,69 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Aki.Reflection" />
-	<Reference Include="Aki.Common" />
-	<Reference Include="Assembly-CSharp-firstpass">
-	  <HintPath>libs\Assembly-CSharp-firstpass.dll</HintPath>
+    <Reference Include="Aki.Reflection">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Aki.Reflection.dll</HintPath>
 	</Reference>
-	<Reference Include="ItemComponent.Types" />
-    <Reference Include="Comfort" />
-    <Reference Include="Assembly-CSharp" />
-    <Reference Include="UnityEngine" />
-    <Reference Include="UnityEngine.CoreModule" />
-	<Reference Include="UnityEngine.InputLegacyModule" />
-	<Reference Include="UnityEngine.JSONSerializeModule" />
-	<Reference Include="UnityEngine.UnityWebRequestModule" />
-    <Reference Include="UnityEngine.UnityWebRequestTextureModule" />
-    <Reference Include="UnityEngine.UnityWebRequestWWWModule" />
-	<Reference Include="UnityEngine.UnityWebRequestAudioModule" />
-	<Reference Include="AnimationSystem.Types" />
-	<Reference Include="Newtonsoft.Json" />
-    <Reference Include="notGreg.UniformAim" />
-	<Reference Include="UnityEngine.AudioModule" />
-    <Reference Include="Unity.Postprocessing.Runtime" />
-	<Reference Include="UnityEngine.PhysicsModule" />
-	<Reference Include="ItemTemplate.Types" />
-    <Reference Include="UnityEngine.TerrainPhysicsModule" />
+	<Reference Include="Aki.Common">
+	  <HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Aki.Common.dll</HintPath>
+	</Reference>
+	<Reference Include="Assembly-CSharp-firstpass">
+	  <HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+	</Reference>
+	<Reference Include="ItemComponent.Types">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\ItemComponent.Types.dll</HintPath>
+	</Reference>
+    <Reference Include="Comfort">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Comfort.dll</HintPath>
+	</Reference>
+    <Reference Include="Assembly-CSharp">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Assembly-CSharp.dll</HintPath>
+	</Reference>
+    <Reference Include="UnityEngine">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.dll</HintPath>
+	</Reference>
+    <Reference Include="UnityEngine.CoreModule">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+	</Reference>
+	<Reference Include="UnityEngine.InputLegacyModule">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
+	</Reference>
+	<Reference Include="UnityEngine.JSONSerializeModule">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.JSONSerializeModule.dll</HintPath>
+	</Reference>
+	<Reference Include="UnityEngine.UnityWebRequestModule">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestModule.dll</HintPath>
+	</Reference>
+    <Reference Include="UnityEngine.UnityWebRequestTextureModule">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestTextureModule.dll</HintPath>
+	</Reference>
+    <Reference Include="UnityEngine.UnityWebRequestWWWModule">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestWWWModule.dll</HintPath>
+	</Reference>
+	<Reference Include="UnityEngine.UnityWebRequestAudioModule">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestAudioModule.dll</HintPath>
+	</Reference>
+	<Reference Include="AnimationSystem.Types">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\AnimationSystem.Types.dll</HintPath>
+	</Reference>
+	<Reference Include="Newtonsoft.Json">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Newtonsoft.Json.dll</HintPath>
+	</Reference>
+	<Reference Include="UnityEngine.AudioModule">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
+	</Reference>
+    <Reference Include="Unity.Postprocessing.Runtime">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Unity.Postprocessing.Runtime.dll</HintPath>
+	</Reference>
+	<Reference Include="UnityEngine.PhysicsModule">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
+	</Reference>
+	<Reference Include="ItemTemplate.Types">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\ItemTemplate.Types.dll</HintPath>
+	</Reference>
+    <Reference Include="UnityEngine.TerrainPhysicsModule">
+		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.TerrainPhysicsModule.dll</HintPath>
+	</Reference>
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
