--- a/RealismMod.csproj
+++ b/RealismMod.csproj
@@ -12,67 +12,67 @@
 
   <ItemGroup>
     <Reference Include="Aki.Reflection">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Aki.Reflection.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\Aki.Reflection.dll</HintPath>
 	</Reference>
 	<Reference Include="Aki.Common">
-	  <HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Aki.Common.dll</HintPath>
+	  <HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\Aki.Common.dll</HintPath>
 	</Reference>
 	<Reference Include="Assembly-CSharp-firstpass">
-	  <HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+	  <HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
 	</Reference>
 	<Reference Include="ItemComponent.Types">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\ItemComponent.Types.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\ItemComponent.Types.dll</HintPath>
 	</Reference>
     <Reference Include="Comfort">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Comfort.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\Comfort.dll</HintPath>
 	</Reference>
     <Reference Include="Assembly-CSharp">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Assembly-CSharp.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\Assembly-CSharp.dll</HintPath>
 	</Reference>
     <Reference Include="UnityEngine">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.dll</HintPath>
 	</Reference>
     <Reference Include="UnityEngine.CoreModule">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEngine.InputLegacyModule">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEngine.JSONSerializeModule">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.JSONSerializeModule.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.JSONSerializeModule.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEngine.UnityWebRequestModule">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestModule.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestModule.dll</HintPath>
 	</Reference>
     <Reference Include="UnityEngine.UnityWebRequestTextureModule">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestTextureModule.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestTextureModule.dll</HintPath>
 	</Reference>
     <Reference Include="UnityEngine.UnityWebRequestWWWModule">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestWWWModule.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestWWWModule.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEngine.UnityWebRequestAudioModule">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestAudioModule.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.UnityWebRequestAudioModule.dll</HintPath>
 	</Reference>
 	<Reference Include="AnimationSystem.Types">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\AnimationSystem.Types.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\AnimationSystem.Types.dll</HintPath>
 	</Reference>
 	<Reference Include="Newtonsoft.Json">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Newtonsoft.Json.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\Newtonsoft.Json.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEngine.AudioModule">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
 	</Reference>
     <Reference Include="Unity.Postprocessing.Runtime">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\Unity.Postprocessing.Runtime.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\Unity.Postprocessing.Runtime.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEngine.PhysicsModule">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
 	</Reference>
 	<Reference Include="ItemTemplate.Types">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\ItemTemplate.Types.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\ItemTemplate.Types.dll</HintPath>
 	</Reference>
     <Reference Include="UnityEngine.TerrainPhysicsModule">
-		<HintPath>F:\Live EFT\EscapeFromTarkov_Data\Managed\UnityEngine.TerrainPhysicsModule.dll</HintPath>
+		<HintPath>F:\SinglePlayerTarkov\EscapeFromTarkov_Data\Managed\UnityEngine.TerrainPhysicsModule.dll</HintPath>
 	</Reference>
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
